# claudius

./: .gitignore  LICENSE  README.md  anim_scattering.py  ann_cst_anim.py  ann_cst_plot.py  cmd.sh  disk_dir_anim.py  disk_dir_plot.py  disk_neu_anim.py  disk_neu_plot.py  disk_trans_anim.py  disk_trans_plot.py  far_field_plot.py  format.sh  make_test_cov.sh  plot_scattering.py  profiling.py  pyproject.toml  pytest.ini  script.py  test.py
.github/workflows/: workflow.yml
accoster/: __init__.py  core.py  core2.py  field_2d.py  normL2.py  utils.py
accoster/ann_cts/: calc_field.py  far_field.py  field.py  solution.py
accoster/ann_flat/: calc_field.py  calc_solution.py
accoster/disk_dir/: __init__.py  calc_field.py  far_field.py  solution.py
accoster/disk_neu/: __init__.py  calc_field.py  far_field.py  solution.py
accoster/disk_trans/: calc_field.py  calc_solution.py  far_field.py  field.py  solution.py
acswave/: __init__.py  calc_field.py  core.py  field_2d.py  normL2.py  plot.py  solve_prob.py
acswave/Helmholtz_2d/: calc_field.py  far_field.py  funCD.py
acswave/ann_cts/: far_field.py  solution.py
acswave/ann_flat/: calc_solution.py
acswave/disk_dir/: calc_field.py  solution.py
acswave/disk_trans/: calc_field.py  far_field.py  field.py  solution.py
claudius/: __init__.py  calc_field.py  coordinates.py  coords.py  core.py  far_field.py  normL2.py  plot.py  solve_prob.py  utils.py
claudius/Helmholtz_2d/: __init__.py  anim_field.py  base_fun.py  calc_field.py  funCD.py  plane_wave.py  plot_field.py  prob_cst.py  utils.py
claudius/Helmholtz_3d/: __init__.py  base_fun.py  calc_field.py  plane_wave.py  prob_cst.py  utils.py
claudius/Maxwell_3d/: base_fun.py  calc_field.py  plane_wave.py  prob_cst.py  utils.py
claudius/plot/: __init__.py  anim_field.py  plot.py  plot_far_field.py  plot_field.py
claudius_dev/: __init__.py  constant.py  obstacle.py
dev/: dev_trunc.py  dev_uinc_3d.py  profiling.py  script.py
doc/: references.bib  the_maths.tex
docs/: main.tex  the_maths.tex
docs/source/: conf.py  index.rst
examples/: Dirichlet_anim.py  Dirichlet_plot.py  Impenetrable_anim.py  Impenetrable_plot.py  Neuman_anim.py  Neumann_plot.py  Penetrable_anim.py  Penetrable_plot.py  ann_cst_anim.py  ann_cst_plot.py  context.py  disk_dir_anim.py  disk_dir_plot.py  disk_neu_anim.py  disk_neu_plot.py  disk_trans_anim.py  disk_trans_far_field.py  disk_trans_plot.py  impenetrable_plot.py
legacy/: dir_neu_far_field.py
legacy/ann_cts/: calc_field.py  field.py
legacy/ann_flat/: calc_field.py
legacy/disk_dir/: far_field.py
legacy/disk_neu/: calc_field.py  far_field.py  solution.py
legacy/disk_trans/: __init__.py
rot_inv_scattering/: __init__.py  calc_field.py  calc_field_2d.py  coords.py  core.py  utils.py
rot_inv_scattering/ann_cts/: calc_field.py
rot_inv_scattering/ann_flat/: __init__.py  calc_field.py  calc_solution.py
rot_inv_scattering/disk/: __init__.py  (+2 more)
tests/: test_H2.py  test_H3.py  test_coordinates.py  test_core.py
(+17 files in other folders)
