[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "claudius"
author = "Zoïs Moitier"
author-email = "z.moitier@gmail.com"
home-page = "https://github.com/zmoitier/claudius"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
    "numba>=0.51.2",
    "numpy>=1.19.4",
    "scipy>=1.5.4"
]

[tool.flit.metadata.requires-extra]
plot = [
    "matplotlib>=3.3.3"
]
dev = [
    "black==20.8b1",
    "isort==5.6.4",
    "pytest==6.1.2",
    "pytest-cov==2.10.1"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=claudius --ff -x --no-cov-on-fail --durations=10"
testpaths = [
    "tests"
]
